# Staff-Allocation-cli

./: .gitignore  CMakeLists.txt  Final_Staff_Allocation_Sheet.xlsx  LICENSE  README.md  Staff-Allocation.cpp  Staff-Allocation.xlsx  StaffAllocation.xlsx  build.ps1  build.sh  main.cpp
libxl/: CMakeLists.txt
